@@ -175,7 +175,7 @@ issues you find at
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
     
 
-       Release Notes - UIMA - Version 2.2.2
+        Release Notes - UIMA - Version 2.2.2
         
 <h2>        Bug
 </h2>
@@ -296,7 +296,13 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-923'>UIMA-923</a>] -         update the run examples scripts to use XMI format of CAS.
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-935'>UIMA-935</a>] -         [UIMA eclipse plugins] Possible WRONG wiring of imported packages for UIMA Eclipse plugins
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-936'>UIMA-936</a>] -         NPE when serializing a CAS with a String array that contains a null value element
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-939'>UIMA-939</a>] -         PEAR packaging eclipse plugin not visible after installation
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-951'>UIMA-951</a>] -         Eclipse split packages not handled well - causing plugin ClassNotFound failures
 </li>
 </ul>
     
@@ -386,7 +392,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-749'>UIMA-749</a>] -         add performance report to CVD
 </li>
 </ul>
-
                         
 </body>
 </html>
